Add Log singleton and integrate logging into MyGUI
- Added `#include "Engine/Log.h"` to `MyGUI.cpp` and `main.cpp`.
- Removed `logMessage` method and `logMessages` vector from `MyGUI`.
- Implemented `renderConsoleWindow` in `MyGUI.cpp` to use `Log` singleton.
- Added log messages in `main.cpp` using `Log` singleton.
- Included `Log.h` in `Engine.vcxproj` and `Engine.vcxproj.filters`.
- Created `Log` class in `Log.h` with singleton pattern for logging.

--- a/Maker/Engine/Engine.vcxproj
+++ b/Maker/Engine/Engine.vcxproj
@@ -81,6 +81,7 @@
     <ClInclude Include="FileManager.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Image.h" />
+    <ClInclude Include="Log.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="MeshLoader.h" />
     <ClInclude Include="readOnlyView.h" />
