--- a/Maker/Engine/Engine.vcxproj.filters
+++ b/Maker/Engine/Engine.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="TransformComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameObject.cpp">
