--- a/Maker/Engine/Engine.vcxproj
+++ b/Maker/Engine/Engine.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="Log.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="MeshLoader.h" />
+    <ClInclude Include="PolyList.h" />
     <ClInclude Include="readOnlyView.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Texture.h" />
