--- a/Maker/Engine/Engine.vcxproj.filters
+++ b/Maker/Engine/Engine.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="Log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PolyList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameObject.cpp">
