--- a/Maker/Editor/Editor.vcxproj
+++ b/Maker/Editor/Editor.vcxproj
@@ -81,13 +81,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Importer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MeshImporter.cpp" />
     <ClCompile Include="MyGUI.cpp" />
     <ClCompile Include="MyWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Importer.h" />
+    <ClInclude Include="MeshImporter.h" />
     <ClInclude Include="MyGUI.h" />
     <ClInclude Include="MyWindow.h" />
   </ItemGroup>
