--- a/Maker/Editor/Editor.vcxproj.filters
+++ b/Maker/Editor/Editor.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="MyWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Importer.cpp">
+    <ClCompile Include="MeshImporter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -35,7 +35,7 @@
     <ClInclude Include="MyWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Importer.h">
+    <ClInclude Include="MeshImporter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
