--- a/Maker/Engine/Engine.vcxproj
+++ b/Maker/Engine/Engine.vcxproj
@@ -82,6 +82,7 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="Log.h" />
+    <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="MeshLoader.h" />
     <ClInclude Include="PolyList.h" />
