--- a/Maker/Engine/Engine.vcxproj.filters
+++ b/Maker/Engine/Engine.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="CameraComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Material.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameObject.cpp">
