--- a/Maker/Editor/Editor.vcxproj
+++ b/Maker/Editor/Editor.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="MeshImporter.cpp" />
     <ClCompile Include="MyGUI.cpp" />
     <ClCompile Include="MyWindow.cpp" />
+    <ClCompile Include="SceneSerializator.cpp" />
     <ClCompile Include="TextureImporter.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -93,6 +94,7 @@
     <ClInclude Include="MeshImporter.h" />
     <ClInclude Include="MyGUI.h" />
     <ClInclude Include="MyWindow.h" />
+    <ClInclude Include="SceneSerializator.h" />
     <ClInclude Include="TextureImporter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
