--- a/Maker/Editor/Editor.vcxproj.filters
+++ b/Maker/Editor/Editor.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="TextureImporter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SceneSerializator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyGUI.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TextureImporter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneSerializator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
